# TFG

./: Makefile  README.md  TODO.txt  cert.pem  functions.py  key.pem  main.py  requirements.txt  test.py
AC/: aprobar_solicitudes.sh  index.txt
AC/nuevoscerts/: 01.pem
AC/privado/: ca1key.pem
AC/solicitudes/: diego.pem
Code/: Makefile  README.md  TODO.txt  main.py  requirements.txt  test.py
Code/AC/: ac1cert.pem  aprobar_solicitudes.sh  index.txt  openssl.cnf  revocar_certificados.sh
Code/AC/nuevoscerts/: 00.pem  01.pem  02.pem  03.pem  04.pem  05.pem  06.pem  07.pem  08.pem  09.pem  0A.pem  0B.pem
Code/AC/privado/: ca1.pem  ca1key.pem
Code/app/: config_manager.py  cppclient.py  security.py  survey.py  survey_helpers.py  users.py
Code/config/: client_secret.json.encrypted  search_secret.key.encrypted  token_store.json.encrypted
Code/cpp/seal/: CMakeLists.txt
Code/cpp/server/: CMakeLists.txt  Makefile  README.md  servidor_seal.cpp
Code/db/: messages.db  survey.db  users.db
Code/static/css/: interface.css  styles.css  surveys.css
Code/static/js/: scripts.js
Code/templates/: create_survey.html  edit_survey.html  forgot_password.html  home.html  login.html  messages.html  oauth2callback.html  profile.html  register.html  reset_password.html  search_survey_by_code.html  statistics.html  users.html  vote_survey.html
Servidor en C/: Makefile  README.md  TODO.txt  client.py  logger.x  servidor.c
Servidor en C++/: Makefile  README.md  servidor.cpp  test.py
ServidorCpp/: README.md  client.py  servidor.cpp
ServidorCpp/Seal/: CMakeLists.txt  Makefile  main.cpp
app/: messages.py  security.py  test.py  users.py
cpp/seal/: CMakeLists.txt  Makefile  main.cpp  test.cpp
cpp/server/: Makefile  client.py  logger_server.cpp  servidor.cpp  test_servidor.cpp
db/: users.db
static/css/: interface.css
static/js/: scripts.js
templates/: home.html  index.html  login.html  register.html  users.html
